[package]
name = "syfala_coreaudio"
version = "0.1.0"
edition = "2024"

[lib]

crate-type = ["cdylib"]

[target.'cfg(target_os = "macos")'.dependencies]

coreaudio-sys = "0.2"
oslog = { version = "0.2", features = ["logger"] }
atomic_float = "1"
atomic_refcell = "0.1"
log = { version = "0.4", features = ["std"] }